# TracePicker

./: .gitignore  Makefile  PROJECT_STATUS.md  README.md  README_NEW.md  REFACTOR_SUMMARY.md  benchmark.py  demo.py  demo_new.py  main.py  main_new.py  pyproject.toml  requirements.txt  test_real_data.py  test_tracepicker_stats.py  tracepicker_cli.py
TracePicker/: convert_pkl_to_csv.py  pyproject.toml
TracePicker/src/tracepicker/: __init__.py
src/tracepicker/: __init__.py  cli.py  register_samplers.py
src/tracepicker/algorithms/: input_schema.py  platform_adapter.py  platform_adapter_backup.py  quota_allocator.py  sample_optimizer.py
src/tracepicker/core/: buffer.py  encoder.py  pool.py  tracepicker.py
src/tracepicker/entities/: trace.py
src/tracepicker/preprocessing/: data_preprocessor.py
src/tracepicker/samplers/: __init__.py  tracepicker_sampler.py
src/tracepicker/utils/: data_loader.py  io_utils.py  legacy_loader.py  new_data_loader.py  result_saver.py  timing.py
tests/: __init__.py  test_entities.py
