[project]
name = "TracePicker"
version = "0.1.0"
requires-python = ">=3.12"
description = "TracePicker: Intelligent trace sampling for distributed systems"
readme = "README.md"
dependencies = [
    "treelib",
    "numba",
    "pandas",
    "geatpy==2.7.0",
    "pyarrow",
    "scipy",
    "networkx",
    "joblib",
    "scikit-learn",
    "torch==2.4.0",
    "tqdm",
    "dgl",
    "rcabench-platform==0.3.31b1",
    "rcabench>=1.1.30",
    "polars>=0.20.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]
[tool.uv.sources]
geatpy = { url = "https://github.com/geatpy-dev/geatpy/releases/download/v2.7.0/geatpy-2.7.0-cp312-cp312-manylinux1_x86_64.whl" }
dgl = { url = "https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp312-cp312-manylinux1_x86_64.whl" }
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp312-cp312-linux_x86_64.whl" }

[dependency-groups]
dev = ["ipykernel>=6.29.5", "jupyter>=1.1.1"]
